--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,35 @@
 <link rel="shortcut icon" href="d.png" type="image/png">
 </head>
 <body>
+<div id="bg" class="noprint">
+<svg width="100%" height="100%">
+<defs>
+<pattern id="Pattern1" patternUnits="userSpaceOnUse" x="0" y="0" width="4px" height="2px" viewBox="0 0 2 1">
+<rect x="0" y="0" width="1" height="1" fill="#597796"></rect>
+<rect x="1" y="0" width="1" height="1" fill="#bccbc1"></rect>
+</pattern>
+<linearGradient id="Gradient1" x1="0%" y1="0%" x2="100%" y2="0%">
+<stop offset="0%" style="stop-color:#f8eed5; stop-opacity:1"></stop>
+<stop offset="100%" style="stop-color:#f8eed5; stop-opacity:0"></stop>
+</linearGradient>
+<pattern id="Pattern2" patternUnits="userSpaceOnUse" x="0" y="0" width="2px" height="4px" viewBox="0 0 1 2">
+<rect x="0" y="0" width="1" height="1" fill="#7b1e1e"></rect>
+<rect x="0" y="1" width="1" height="1" fill="#b9776d"></rect>
+</pattern>
+<linearGradient id="Gradient2" x1="0%" y1="0%" x2="0%" y2="100%">
+<stop offset="0%" style="stop-color:#f8eed5; stop-opacity:1"></stop>
+<stop offset="100%" style="stop-color:#f8eed5; stop-opacity:0"></stop>
+</linearGradient>
+</defs>
+<rect fill="url(#Pattern1)" x="0" y="0" width="100%" height="100%"></rect>
+<rect fill="url(#Gradient1)" x="0" y="0" width="100%" height="100%"></rect>
+<g opacity=".5">
+  <rect fill="url(#Pattern2)" x="0" y="0" width="100%" height="100%"></rect>
+  <rect fill="url(#Gradient2)" x="0" y="0" width="100%" height="100%"></rect>
+</g>
+</svg>
+</div>
+<div id="mainwrapper">
 <div id="main">
 <table id="header"><tr><td id="daniel">Daniel Müllner</td>
 <td class="noprint right"><a href="http://danifold.net/index.html" class="homepagelink">Main page</a> » <a href="http://danifold.net/fancontrol.html" class="homepagelink">Ventilation controller</a></td></tr></table>
@@ -106,7 +135,8 @@ Pick a date:<span style="display:inline-block; width:1em;"></span><a href="javas
 <div style="margin-top:1.2ex"></div>
 <div style="text-align:center; width:1490px; line-height:675px; position:absolute;"><span style="font-size:26pt; background:#800; color:white; font-weight:bold; padding:1ex 1em;">Image not available</span></div>
 <div style="width:1490px; height:675px;">
-<img src="" alt="Temperature/dew point curves" id="graph" style="color:white; font-size:0pt; position:relative; z-index:1; height:675px; width:1490px;">
+<img src="http://danifold.net/1x1.png" alt="Temperature/dew point curves" id="graph" style="color:white; font-size:0pt; position:relative; z-index:1; height:675px; width:1490px;">
+</div>
 </div>
 <script src="http://danifold.net/Pikaday/pikaday.js" type="text/javascript"></script>
 <script type="text/javascript">
