Fixed icon link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="http://danifold.net/formate.css">
 <link rel="stylesheet" href="http://danifold.net/Pikaday/css/pikaday.css">
 <link rel="stylesheet" href="http://danifold.net/Pikaday/css/triangle.css">
-<link rel="shortcut icon" href="d.png" type="image/png">
+<link rel="shortcut icon" href="http://danifold.net/d.png" type="image/png">
 </head>
 <body>
 <div id="bg" class="noprint">
