Data visualization improvements.

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
     <td>
       Relative humidity in %
     </td>
-    <td class="c" id="rH1">N/A</td>
-    <td class="c" id="rH2">N/A</td>
+    <td class="r s" id="rH1">N/A</td>
+    <td class="r s" id="rH2">N/A</td>
   </tr>
   <tr>
     <td>
       Temperature in °C
     </td>
-    <td class="c" id="T1">N/A</td>
-    <td class="c" id="T2">N/A</td>
+    <td class="r s" id="T1">N/A</td>
+    <td class="r s" id="T2">N/A</td>
   </tr>
   <tr class="bg">
     <td>
       Dew point in °C
     </td>
-    <td class="c" id="tau1">N/A</td>
-    <td class="c" id="tau2">N/A</td>
+    <td class="r s" id="tau1">N/A</td>
+    <td class="r s" id="tau2">N/A</td>
   </tr>
   <tr>
     <td colspan="3" id="fanstate">N/A</td>
@@ -133,9 +133,9 @@ See below: <button type="button" onclick="onGraphButton()" id="graphbutton">Hide
 <div style="float:right"><a href="javascript:leaveOverlay()">Hide ☒</a></div>
 Pick a date:<span style="display:inline-block; width:1em;"></span><a href="javascript:prevDay()">◀</a> <input type="text" id="datepicker"> <a href="javascript:nextDay()">▶</a><br>
 <div style="margin-top:1.2ex"></div>
-<div style="text-align:center; width:1490px; line-height:675px; position:absolute;"><span style="font-size:26pt; background:#800; color:white; font-weight:bold; padding:1ex 1em;">Image not available</span></div>
-<div style="width:1490px; height:675px;">
-<img src="http://danifold.net/1x1.png" alt="Temperature/dew point curves" id="graph" style="color:white; font-size:0pt; position:relative; z-index:1; height:675px; width:1490px;">
+<div style="text-align:center; width:1525px; line-height:675px; position:absolute;"><span style="font-size:26pt; background:#800; color:white; font-weight:bold; padding:1ex 1em;">Image not available</span></div>
+<div style="width:1525px; height:675px;">
+<img src="http://danifold.net/1x1.png" alt="Temperature/dew point curves" id="graph" style="color:white; font-size:0pt; position:relative; z-index:1; height:675px; width:1525px;">
 </div>
 </div>
 <script src="http://danifold.net/Pikaday/pikaday.js" type="text/javascript"></script>
